# SimpleMVS

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: SimpleMVS.cpp
config/: ETH3D_botanical_garden.json  ETH3D_observatory.json  test.json
include/: MVSProcess.hpp  cameras.hpp  images.hpp  jsonReader.hpp  jsoncpp.hpp  parameters.hpp
src/: MVSProcess.cpp  SimpleMVS.cpp  cameras.cpp  images.cpp  readJsonFile.cpp
